--- a/notebooks/1-playground.ipynb
+++ b/notebooks/1-playground.ipynb
@@ -9,10 +9,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "wharton",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.9.13 (main, Oct 13 2022, 21:15:33) \n[GCC 11.2.0]"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "0953b9f2ee8bbbe4477fa89422ceadd49d5fe44d6fd9d7cb5db72bb439c5570f"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
