--- a/notebooks/1-playground.ipynb
+++ b/notebooks/1-playground.ipynb
@@ -15,22 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['This', 'is', 'a', 'bad', 'movie'], True)"
+       "(['I', 'dislike', 'this', 'movie'], True)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "antonym([\"This\", \"is\", \"a\", \"good\", \"movie\"], sub_all=False)"
+    "antonym(\"I like this movie\", sub_all=False)"
    ]
   },
   {
