--- a/notebooks/1-playground.ipynb
+++ b/notebooks/1-playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "                batch_size=16,\n",
     "                device=0)\n",
     "\n",
-    "from src import antonym, G"
+    "from src import antonym, add_not, G"
    ]
   },
   {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "9  Clothing chain Sepp+ñl+ñ 's net sales increase...  positive"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in dataset.original:\n",
+    "    try:\n",
+    "        for s in G.sent_tokenize(p):\n",
+    "            add_not(s)\n",
+    "        # print()\n",
+    "    except:\n",
+    "        print(\"ERROR:\", p)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -179,8 +195,9 @@
        "      <th>original</th>\n",
        "      <th>label</th>\n",
        "      <th>antonym_raw</th>\n",
-       "      <th>has_any_replace</th>\n",
+       "      <th>add_not_raw</th>\n",
        "      <th>antonym</th>\n",
+       "      <th>add_not</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -189,40 +206,45 @@
        "      <td>Earnings per share ( EPS ) amounted to EUR1 .3...</td>\n",
        "      <td>negative</td>\n",
        "      <td>Earnings per share ( EPS ) amounted to EUR1 .3...</td>\n",
-       "      <td>False</td>\n",
+       "      <td>Earnings per share ( EPS ) didn't amount to EU...</td>\n",
        "      <td>Earnings per share (EPS) amounted to EUR1 .37,...</td>\n",
+       "      <td>Earnings per share (EPS) didn't amount to EUR1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Kiosk and cinema operations have suffered , in...</td>\n",
        "      <td>negative</td>\n",
        "      <td>Kiosk and cinema operations have enjoy , in pa...</td>\n",
-       "      <td>True</td>\n",
+       "      <td>Kiosk and cinema operations don't have suffere...</td>\n",
        "      <td>Kiosk and cinema operations have enjoyed, in p...</td>\n",
+       "      <td>Kiosk and cinema operations don't have suffere...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Last week , the Finnish metals and technology ...</td>\n",
        "      <td>positive</td>\n",
-       "      <td>first week , the Finnish metals and technology...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>First week, the Finnish metals and technology ...</td>\n",
+       "      <td>Last week , the Finnish metals and technology ...</td>\n",
+       "      <td>Last week , the Finnish metals and technology ...</td>\n",
+       "      <td>Last week, the Finnish metals and technology g...</td>\n",
+       "      <td>Last week, the Finnish metals and technology g...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>According to Karhinen , OP-Pohjola is an excit...</td>\n",
        "      <td>positive</td>\n",
        "      <td>According to Karhinen , OP-Pohjola is an unexc...</td>\n",
-       "      <td>True</td>\n",
+       "      <td>not According to Karhinen , OP-Pohjola is an e...</td>\n",
        "      <td>According to Karhinen, OP-Pohjola is an unexci...</td>\n",
+       "      <td>not according to Karhinen, OP-Pohjola is an ex...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Sales climbed 19.2 pct to 1.002 bln eur , surp...</td>\n",
        "      <td>positive</td>\n",
        "      <td>Sales wane 19.2 pct to 1.002 bln eur , surpass...</td>\n",
-       "      <td>True</td>\n",
+       "      <td>Sales didn't climb 19.2 pct to 1.002 bln eur ,...</td>\n",
        "      <td>Sales wane 19.2 pct to 1.002 bln eur, surpassi...</td>\n",
+       "      <td>Sales didn't climb 19.2 pct to 1.002 bln eur, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -236,39 +258,61 @@
        "3  According to Karhinen , OP-Pohjola is an excit...  positive   \n",
        "4  Sales climbed 19.2 pct to 1.002 bln eur , surp...  positive   \n",
        "\n",
-       "                                         antonym_raw  has_any_replace  \\\n",
-       "0  Earnings per share ( EPS ) amounted to EUR1 .3...            False   \n",
-       "1  Kiosk and cinema operations have enjoy , in pa...             True   \n",
-       "2  first week , the Finnish metals and technology...             True   \n",
-       "3  According to Karhinen , OP-Pohjola is an unexc...             True   \n",
-       "4  Sales wane 19.2 pct to 1.002 bln eur , surpass...             True   \n",
+       "                                         antonym_raw  \\\n",
+       "0  Earnings per share ( EPS ) amounted to EUR1 .3...   \n",
+       "1  Kiosk and cinema operations have enjoy , in pa...   \n",
+       "2  Last week , the Finnish metals and technology ...   \n",
+       "3  According to Karhinen , OP-Pohjola is an unexc...   \n",
+       "4  Sales wane 19.2 pct to 1.002 bln eur , surpass...   \n",
        "\n",
-       "                                             antonym  \n",
-       "0  Earnings per share (EPS) amounted to EUR1 .37,...  \n",
-       "1  Kiosk and cinema operations have enjoyed, in p...  \n",
-       "2  First week, the Finnish metals and technology ...  \n",
-       "3  According to Karhinen, OP-Pohjola is an unexci...  \n",
-       "4  Sales wane 19.2 pct to 1.002 bln eur, surpassi...  "
+       "                                         add_not_raw  \\\n",
+       "0  Earnings per share ( EPS ) didn't amount to EU...   \n",
+       "1  Kiosk and cinema operations don't have suffere...   \n",
+       "2  Last week , the Finnish metals and technology ...   \n",
+       "3  not According to Karhinen , OP-Pohjola is an e...   \n",
+       "4  Sales didn't climb 19.2 pct to 1.002 bln eur ,...   \n",
+       "\n",
+       "                                             antonym  \\\n",
+       "0  Earnings per share (EPS) amounted to EUR1 .37,...   \n",
+       "1  Kiosk and cinema operations have enjoyed, in p...   \n",
+       "2  Last week, the Finnish metals and technology g...   \n",
+       "3  According to Karhinen, OP-Pohjola is an unexci...   \n",
+       "4  Sales wane 19.2 pct to 1.002 bln eur, surpassi...   \n",
+       "\n",
+       "                                             add_not  \n",
+       "0  Earnings per share (EPS) didn't amount to EUR1...  \n",
+       "1  Kiosk and cinema operations don't have suffere...  \n",
+       "2  Last week, the Finnish metals and technology g...  \n",
+       "3  not according to Karhinen, OP-Pohjola is an ex...  \n",
+       "4  Sales didn't climb 19.2 pct to 1.002 bln eur, ...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Do antonym replacement\n",
-    "dataset[\"antonym_raw\"], dataset[\"has_any_replace\"] = \\\n",
-    "    zip(*dataset[\"original\"].map(lambda x: antonym(x, is_sub_all=True)))\n",
+    "def driver(p):\n",
+    "    \"\"\"Do antonym replacement and add not\"\"\"\n",
+    "    \n",
+    "    ret_ant, ret_add = [], []\n",
+    "    for s in G.sent_tokenize(p):\n",
+    "        ret_add.append(add_not(s))\n",
+    "        ret_ant.append(antonym(s))\n",
+    "    return \" \".join(ret_ant), \" \".join(ret_add)\n",
+    "\n",
+    "dataset[\"antonym_raw\"], dataset[\"add_not_raw\"] = zip(*dataset[\"original\"].map(driver))\n",
     "\n",
     "# Apply the grammar correction model to the generated texts\n",
     "dataset[\"antonym\"] = [o[\"generated_text\"] for o in pipe(dataset[\"antonym_raw\"].tolist())]\n",
+    "dataset[\"add_not\"] = [o[\"generated_text\"] for o in pipe(dataset[\"add_not_raw\"].tolist())]\n",
     "dataset.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -276,12 +320,13 @@
       "text/plain": [
        "['The Finnish supplier of BSS-OSS and VAS for telecom operators , Tecnotree , has received expansion orders worth a total US$ 7.3 mn for its convergent charging and next generation messaging solutions in Latin America , the company announced without specifying which operators had placed the orders .',\n",
        " 'positive',\n",
-       " 'The Finnish supplier of BSS-OSS and VAS for telecom operators , Tecnotree , has say_farewell contraction disorder worthlessness a total US $ 7.3 mn for its convergent charging and next generation messaging solutions in Latin America , the company announced without generalize which operators had divest the disorder .',\n",
-       " True,\n",
-       " 'The Finnish supplier of BSS-OSS and VAS for telecom operators, Tecnotree, has say_farewell contraction disorder worthlessness a total US$7.3 mn for its convergent charging and next generation messaging solutions in Latin America, the company announced without generalizing which operators had divest the disorder.']"
+       " 'The Finnish supplier of BSS-OSS and VAS for telecom operators , Tecnotree , has say_farewell expansion orders worth a total US $ 7.3 mn for its convergent charging and next generation messaging solutions in Latin America , the company announced without specifying which operators had placed the orders .',\n",
+       " \"The Finnish supplier of BSS-OSS and VAS for telecom operators , Tecnotree , doesn't have received expansion orders worth a total US $ 7.3 mn for its convergent charging and next generation messaging solutions in Latin America , the company announced without specifying which operators had placed the orders .\",\n",
+       " 'The Finnish supplier of BSS-OSS and VAS for telecom operators, Tecnotree, has say_farewell expansion orders worth a total US$7.3 mn for its convergent charging and next generation messaging solutions in Latin America, the company announced without specifying which operators had placed the orders.',\n",
+       " \"The Finnish supplier of BSS-OSS and VAS for telecom operators, Tecnotree, doesn't have received expansion orders worth a total US$7.3mn for its convergent charging and next generation messaging solutions in Latin America, the company announced without specifying which operators had placed the orders.\"]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Oct 13 2022, 21:15:33) \n[GCC 11.2.0]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
