--- a/notebooks/1-playground.ipynb
+++ b/notebooks/1-playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "\n",
     "from transformers import pipeline\n",
     "pipe = pipeline(\"text2text-generation\", \n",
-    "                model=\"visheratin/t5-efficient-tiny-grammar-correction\",\n",
+    "                model=\"vennify/t5-base-grammar-correction\",\n",
     "                max_length=256,\n",
     "                batch_size=16,\n",
     "                device=0)\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "9  Clothing chain Sepp+ñl+ñ 's net sales increase...  positive"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,23 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for p in dataset.original:\n",
-    "    try:\n",
-    "        for s in G.sent_tokenize(p):\n",
-    "            add_not(s)\n",
-    "        # print()\n",
-    "    except:\n",
-    "        print(\"ERROR:\", p)\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,8 +191,8 @@
        "      <td>negative</td>\n",
        "      <td>Earnings per share ( EPS ) amounted to EUR1 .3...</td>\n",
        "      <td>Earnings per share ( EPS ) didn't amount to EU...</td>\n",
-       "      <td>Earnings per share (EPS) amounted to EUR1 .37,...</td>\n",
-       "      <td>Earnings per share (EPS) didn't amount to EUR1...</td>\n",
+       "      <td>Earnings per share ( EPS ) amounted to EUR1 .3...</td>\n",
+       "      <td>Earnings per share ( EPS ) didn't amount to EU...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -216,7 +200,7 @@
        "      <td>negative</td>\n",
        "      <td>Kiosk and cinema operations have enjoy , in pa...</td>\n",
        "      <td>Kiosk and cinema operations don't have suffere...</td>\n",
-       "      <td>Kiosk and cinema operations have enjoyed, in p...</td>\n",
+       "      <td>Kiosk and cinema operations have enjoyed , in ...</td>\n",
        "      <td>Kiosk and cinema operations don't have suffere...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -234,8 +218,8 @@
        "      <td>positive</td>\n",
        "      <td>According to Karhinen , OP-Pohjola is an unexc...</td>\n",
        "      <td>not According to Karhinen , OP-Pohjola is an e...</td>\n",
-       "      <td>According to Karhinen, OP-Pohjola is an unexci...</td>\n",
-       "      <td>not according to Karhinen, OP-Pohjola is an ex...</td>\n",
+       "      <td>According to Karhinen, OP-Pohjola is an exciti...</td>\n",
+       "      <td>According to Karhinen, OP-Pohjola is an exciti...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -243,8 +227,8 @@
        "      <td>positive</td>\n",
        "      <td>Sales wane 19.2 pct to 1.002 bln eur , surpass...</td>\n",
        "      <td>Sales didn't climb 19.2 pct to 1.002 bln eur ,...</td>\n",
-       "      <td>Sales wane 19.2 pct to 1.002 bln eur, surpassi...</td>\n",
-       "      <td>Sales didn't climb 19.2 pct to 1.002 bln eur, ...</td>\n",
+       "      <td>Sales waned 19.2 pct to 1.002 bln eur , surpas...</td>\n",
+       "      <td>Sales didn't climb 19.2 pct to 1.002 billion e...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -273,21 +257,21 @@
        "4  Sales didn't climb 19.2 pct to 1.002 bln eur ,...   \n",
        "\n",
        "                                             antonym  \\\n",
-       "0  Earnings per share (EPS) amounted to EUR1 .37,...   \n",
-       "1  Kiosk and cinema operations have enjoyed, in p...   \n",
+       "0  Earnings per share ( EPS ) amounted to EUR1 .3...   \n",
+       "1  Kiosk and cinema operations have enjoyed , in ...   \n",
        "2  Last week, the Finnish metals and technology g...   \n",
-       "3  According to Karhinen, OP-Pohjola is an unexci...   \n",
-       "4  Sales wane 19.2 pct to 1.002 bln eur, surpassi...   \n",
+       "3  According to Karhinen, OP-Pohjola is an exciti...   \n",
+       "4  Sales waned 19.2 pct to 1.002 bln eur , surpas...   \n",
        "\n",
        "                                             add_not  \n",
-       "0  Earnings per share (EPS) didn't amount to EUR1...  \n",
+       "0  Earnings per share ( EPS ) didn't amount to EU...  \n",
        "1  Kiosk and cinema operations don't have suffere...  \n",
        "2  Last week, the Finnish metals and technology g...  \n",
-       "3  not according to Karhinen, OP-Pohjola is an ex...  \n",
-       "4  Sales didn't climb 19.2 pct to 1.002 bln eur, ...  "
+       "3  According to Karhinen, OP-Pohjola is an exciti...  \n",
+       "4  Sales didn't climb 19.2 pct to 1.002 billion e...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,27 +296,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['The Finnish supplier of BSS-OSS and VAS for telecom operators , Tecnotree , has received expansion orders worth a total US$ 7.3 mn for its convergent charging and next generation messaging solutions in Latin America , the company announced without specifying which operators had placed the orders .',\n",
-       " 'positive',\n",
-       " 'The Finnish supplier of BSS-OSS and VAS for telecom operators , Tecnotree , has say_farewell expansion orders worth a total US $ 7.3 mn for its convergent charging and next generation messaging solutions in Latin America , the company announced without specifying which operators had placed the orders .',\n",
-       " \"The Finnish supplier of BSS-OSS and VAS for telecom operators , Tecnotree , doesn't have received expansion orders worth a total US $ 7.3 mn for its convergent charging and next generation messaging solutions in Latin America , the company announced without specifying which operators had placed the orders .\",\n",
-       " 'The Finnish supplier of BSS-OSS and VAS for telecom operators, Tecnotree, has say_farewell expansion orders worth a total US$7.3 mn for its convergent charging and next generation messaging solutions in Latin America, the company announced without specifying which operators had placed the orders.',\n",
-       " \"The Finnish supplier of BSS-OSS and VAS for telecom operators, Tecnotree, doesn't have received expansion orders worth a total US$7.3mn for its convergent charging and next generation messaging solutions in Latin America, the company announced without specifying which operators had placed the orders.\"]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset.loc[64].values.tolist()"
+    "# Save the sample dataset\n",
+    "dataset.to_csv(\"../data/financial-phrasebank/sample-neg-128.csv\", index=False)"
    ]
   },
   {
